--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
 
           <!-- Logo -->
-          <a class="navbar-brand text-white" href="#Home"><img src="imgs/BondiW.png" alt="" class="img-fluid"></a>
+          <a class="navbar-brand text-white" href="index.html"><img src="imgs/BondiW.png" alt="" class="img-fluid"></a>
 
           <!-- Toggle Button -->
           <button class="navbar-toggler text-white shadow-none" 
@@ -48,7 +48,7 @@
             <ul class="navbar-nav pe-4 ms-auto p-2 p-lg-3 mb-lg-0">
 
               <li class="nav-item">
-                <a class="nav-link p-lg-3 active" aria-current="page" href="indix.html" >Home</a>
+                <a class="nav-link p-lg-3 active" aria-current="page" href="index.html" >Home</a>
               </li>
 
               <li class="nav-item">
@@ -589,7 +589,7 @@
 
           <div class="col-md-6 col-lg-4">
             <div class="info text-white-50">
-              <a class="" href="indix.html"> <img src="imgs/BondiW.png" alt=""> </a>
+              <a class="" href="index.html"> <img src="imgs/BondiW.png" alt=""> </a>
               <p class="mt-4 mb-5 text-white-50">Bondi is a creative agency specializing in branding, web design, and digital marketing.
               <br> We help businesses grow by creating stunning visuals, engaging content, and effective marketing strategies.</p>
 
@@ -606,7 +606,7 @@
 
               <h5 class="text-white">Links</h5>
               <ul class="list-unstyled lh-lg">
-                <li><a href="indix.html" class="text-white-50">Home</a></li>
+                <li><a href="index.html" class="text-white-50">Home</a></li>
                 <li><a href="#Services" class="text-white-50">Our Services</a></li>
                 <li><a href="#Portfolio" class="text-white-50">Portfolio</a></li>
                 <li><a href="#About" class="text-white-50">About</a></li>
